--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,23 @@
 version: '3.3'
 services:
+  alarcha:
+    image: alarcha:latest
+    restart: always
+    ports:
+      - 8080:8080 # <PORT EXPOSED>:<PORT WITHIN CONTAINER>
+    expose:
+      - '8080'
+    depends_on:
+      - db
   db:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_DATABASE: 'db'
-
-# So you don't have to use root, but you can if you like
-
-MYSQL_USER: 'user'
-
-# You can use whatever password you like
-
-MYSQL_PASSWORD: 'password'
-
-# Password for root access
-
-MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_DATABASE: 'may_prototype'
+      MYSQL_ROOT_PASSWORD: '--'
     ports:
-
-# <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
-
-expose:
-      # Opens port 3306 on the container
-      - '3306'
-      # Where our data will be persisted
-    volumes:
-      - my-db:/var/lib/mysql
-# Names our volume
+      - '6603:6603' # <PORT EXPOSED>:<PORT WITHIN CONTAINER>
 volumes:
+      - my-db:/var/lib/mysql
+volumes: # TODO: finish this later
   my-db:
