--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,7 @@ services:
       MYSQL_ROOT_PASSWORD: '--'
     ports:
       - '6603:6603' # <PORT EXPOSED>:<PORT WITHIN CONTAINER>
+    expose:
+      - '6603'
     volumes:
       - ./db:/var/lib/mysql
