--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/may_prototype?serverTimezone=A
 spring.datasource.username=root
 spring.datasource.password=--
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.level.org.springframework.web=DEBUG
 logging.level.root=INFO
