--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.url=jdbc:mysql://db:3306/may_prototype?serverTimezone=America/New_York
-spring.datasource.url=jdbc:mysql://localhost:3306/may_prototype?serverTimezone=America/New_York
+#spring.datasource.url=jdbc:mysql://db:3306/shop?serverTimezone=America/New_York
+spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=America/New_York
 spring.datasource.username=root
 spring.datasource.password=--
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
