--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://db4free.net:3306/--?serverTimezone=America/New_York
 #spring.datasource.url=jdbc:mysql://db:3306/shop?serverTimezone=America/New_York
-spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=America/New_York
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=America/New_York
+spring.datasource.username=--
 spring.datasource.password=--
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
